moved organizers logos

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul class="nav">
               <li class="active"><a href="#description">Home</a></li>
               <li><a href="#location">Location</a></li>
-              <li><a href="#sponsors">Sponsors</a></li>
+              <li><a href="#organizers">Organizers</a></li>
               <!--<li><a href="#mentors">Mentors</a></li>-->
               <li><a href="#schedule">Schedule</a></li>
               <li><a href="#rules">Rules</a></li>
@@ -172,7 +172,7 @@
 
 
 
-      <div class="row">
+      <div class="row" id="organizers">
         <h3>Organised by:</h3>
         <div class="span6">
           <h4>Betterplace</h4>
@@ -187,17 +187,14 @@
 
         </div>
       </div>
-
-      <hr />
-
-
-      <div class="row" id="sponsors">
-        <h3>Sponsors:</h3>
+      <div class="row" id="organizers_logos">
         <div class="span4"><img src="images/betterplace.jpg" height="80" /></div>
         <div class="span1"></div>
-        <div class="span4"><img src="images/berlin_pil.png" height="80" /></div>
         <div class="span4"><img src="images/labs.png" height="80" /></div>
-        <!-- <div class="span4"><img src="http://placekitten.com/300/80" /></div> -->
+        <div class="span1"></div>
+        <div class="span4"><img src="images/berlin_pil.png" height="80" /></div>
+
+
       </div>
 
       <!--
